--- a/tutorial/核舟记制作教程.md
+++ b/tutorial/核舟记制作教程.md
@@ -1,14 +1,22 @@
 # 核舟记制作教程
 
-pandoc导出的docx图片都是嵌入式的
+## Q1: pandoc导出修改refer docx
+
+
+![image-20251224194521879](src/核舟记制作教程.assets/image-20251224194521879.png)
+修改`custom-reference.docx`里面标题具体文字样式
+
+
+## Q2：pandoc导出的docx图片都是嵌入式的
+
 这个时候进入word/wps
 按住`alt+f11`进入
 
-![image-20251224190150951](核舟记制作教程.assets/image-20251224190150951.png)
+![image-20251224190150951](src/核舟记制作教程.assets/image-20251224190150951.png)
 
 后插入模块
 
-![image-20251224190231769](核舟记制作教程.assets/image-20251224190231769.png)
+![image-20251224190231769](src/核舟记制作教程.assets/image-20251224190231769.png)
 
 粘贴如下代码
 ```
@@ -36,7 +44,7 @@ End Sub
 
 随后运行即可
 
-![image-20251224190522164](核舟记制作教程.assets/image-20251224190522164.png)
+![image-20251224190522164](src/核舟记制作教程.assets/image-20251224190522164.png)
 
 后续改宽度
 
